# Habit-Tracker

./: README.md  run_chat.bat
backend/: .gitignore  README.md  habitos.db  index.html  init_db.py  inspect_db.py  pyproject.toml  pyrightconfig.json  requirements.txt  reset_schema.py  terminal_chat.py
backend/app/: database.py  main.py
backend/app/data/: neurohabit_synthetic_data.csv
backend/app/ml_engine/: __init__.py  loader.py  train_biometrics.py  train_intent.py
backend/app/ml_engine/data/: neurohabit_synthetic_data.csv
backend/app/ml_engine/notebooks/: data_preview.ipynb  data_synthesis.ipynb  model_training.ipynb
backend/app/ml_engine/trained_models/: intent_model.pkl  neuro_classifier.pkl  neuro_clusterer.pkl  neuro_predictor_ann.pkl
backend/app/models/: __init__.py  session.py  user.py
backend/app/routers/: chat.py  prediction.py  user.py
backend/app/schemas/: __init__.py  chat.py  prediction.py  user.py
backend/app/trained_models/: neuro_classifier.pkl  neuro_clusterer.pkl  neuro_predictor_ann.pkl
my-app/app/: globals.css  layout.tsx  page.tsx
my-app/app/charts/: page.tsx
my-app/app/history/: page.tsx
my-app/app/insights/: page.tsx
my-app/components/: Background.tsx  ChatConsole.tsx  Header.tsx  MetricChart.tsx  Navigation.tsx  ResultsPanel.tsx  ScoreGauge.tsx  SessionCard.tsx
my-app/context/: UserContext.tsx
