[project]
name = "habit-tracker"
version = "0.1.0"
description = "Backend for habit tracker"
authors = [
    {name = "Muhammad Haris",email = "imharis021@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "cors (>=1.0.1,<2.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
